--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+main {
+  background-color: #1c1c1c;
+  color: white;
+  padding: 25px 0px;
+}
+
 /* LAYOUT */
 .container {
   max-width: 1200px;
