--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ main {
   padding: 25px 0px;
 }
 
+footer {
+  color: white;
+}
+
 /* LAYOUT */
 .container {
   max-width: 1200px;
@@ -31,6 +35,10 @@ main {
 
 .col-75 {
   width: 75%;
+}
+
+.col-100 {
+  width: 100%;
 }
 
 /* UTILITIES  */
@@ -65,4 +73,28 @@ main {
   color: black;
   text-decoration: none;
   font-weight: 600;
+}
+
+/* FOOTER */
+.top-footer {
+  background-color: #0080f5;
+  padding: 30px 0px;
+}
+
+
+.icons-list {
+  display: flex;
+  justify-content: space-around;
+}
+
+.icons-list img {
+  width: 100px;
+  height: 100px;
+  vertical-align: middle;
+  margin-right: 10px;
+  object-fit: contain;
+}
+
+.icons-list span {
+  vertical-align: middle;
 }
