--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ footer {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  position: relative;
 }
 
 .row {
@@ -31,6 +32,14 @@ footer {
 
 .col-25 {
   width: 25%;
+}
+
+.col-33 {
+  width: 33%;
+}
+
+.col-50 {
+  width: 50%;
 }
 
 .col-75 {
@@ -76,11 +85,13 @@ footer {
 }
 
 /* FOOTER */
+/* Top Footer */
 .top-footer {
   background-color: #0080f5;
   padding: 30px 0px;
+  position: relative;
+  z-index: 2;
 }
-
 
 .icons-list {
   display: flex;
@@ -88,8 +99,8 @@ footer {
 }
 
 .icons-list img {
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
   vertical-align: middle;
   margin-right: 10px;
   object-fit: contain;
@@ -98,3 +109,37 @@ footer {
 .icons-list span {
   vertical-align: middle;
 }
+
+/* Middle Footer */
+.middle-footer {
+  height: 400px;
+  background-image: url("../img/footer-bg.jpg");
+}
+
+.menu-footer {
+  display: flex;
+}
+
+.col-33 h2 {
+  margin-bottom: 15px;
+  margin-top: 40px;
+  font-size: 20px;
+}
+
+.col-33 ul li {
+  color: rgb(174, 174, 174);
+  list-style: none;
+  font-size: 15px;
+}
+
+.background-dc {
+  background-image: url("../img/dc-logo-bg.png");
+  background-repeat: no-repeat;
+  height: 480px;
+  position: fixed;
+  z-index: 1;
+  bottom: 190px;
+  right: -70px;
+}
+
+/* Bottom Footer */
