--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ main {
   background-color: #1c1c1c;
   color: white;
   padding: 50px 0px;
+  background-image: url(../public/img/jumbotron.jpg);
 }
 
 footer {
@@ -83,6 +84,8 @@ footer {
   text-decoration: none;
   font-weight: 600;
 }
+
+/* MAIN */
 
 /* FOOTER */
 /* Top Footer */
