--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,7 @@ body {
 main {
   background-color: #1c1c1c;
   color: white;
-  padding: 50px 0px;
-  background-image: url(../public/img/jumbotron.jpg);
+
 }
 
 footer {
@@ -86,7 +85,22 @@ footer {
 }
 
 /* MAIN */
+.jumbotron {
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
+}
 
+.lista-fumetti {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.lista-fumetti img {
+  max-width: 200px;
+  
+}
 /* FOOTER */
 /* Top Footer */
 .top-footer {
