--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ footer {
   flex-wrap: wrap;
 }
 
+.col-16 {
+  width: calc(100% / 6);
+}
+
 .col-25 {
   width: 25%;
 }
@@ -94,6 +98,7 @@ footer {
 
 .main-title {
   background-color: #0080f5;
+  width: 300px;
   padding: 10px 20px;
   font-size: 30px;
   position: relative;
@@ -102,9 +107,24 @@ footer {
 }
 
 .lista-fumetti {
+  margin-top: 25px;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 25px;
+}
+
+.comics-card {
+  margin: 5px;
+  background-color: #1c1c1c;
+  padding: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 10px;
+}
+
+.comic-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .lista-fumetti img {
@@ -123,7 +143,7 @@ footer {
   background-color: #0080f5;
   color: white;
   border: none;
-  font-size: 13px;
+  /* font-size: 13px; */
   font-weight: bold;
   padding: 10px 40px;
   margin: 20px auto;
